# LatticeCore

./: .clangd  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Package.swift  README.md  SYNC.md
.github/workflows/: capi.yml  linux.yml  macos.yml  release.yml
Sources/GoogleTest/include/: module.modulemap
Sources/LatticeCAPI/: lattice_capi.symbols
Sources/LatticeCAPI/include/: lattice.h  module.modulemap
Sources/LatticeCAPI/src/: lattice.cpp
Sources/LatticeCore/include/: LatticeCore.hpp  module.modulemap
Sources/LatticeCore/include/lattice/: cross_process_notifier.hpp  db.hpp  ipc.hpp  lattice.hpp  log.hpp  managed.hpp  network.hpp  scheduler.hpp  schema.hpp  sync.hpp  types.hpp
Sources/LatticeCore/src/: cross_process_notifier_darwin.cpp  cross_process_notifier_linux.cpp  cross_process_notifier_noop.cpp  db.cpp  ipc.cpp  lattice.cpp  scheduler.cpp  sync.cpp
Sources/LatticeCpp/include/: LatticeCpp.hpp
Sources/LatticeCpp/include/lattice/: db.hpp  lattice.hpp  log.hpp  managed.hpp  network.hpp  observation.hpp  scheduler.hpp  schema.hpp  sync.hpp  types.hpp
Sources/LatticeCpp/src/: db.cpp  lattice.cpp  network.cpp  schema.cpp  sync.cpp
Sources/LatticeSwiftCppBridge/include/: LatticeBridge.hpp  bridging.hpp  dynamic_object.hpp  error.hpp  geo_bounds.hpp  lattice.hpp  list.hpp  managed_object.hpp  module.modulemap  swift_module_umbrella.hpp  unmanaged_object.hpp  util.hpp
Sources/LatticeSwiftCppBridge/src/: dynamic_object.cpp  lattice.cpp  list.cpp  managed_object.cpp  unmanaged_object.cpp
Sources/LatticeSwiftModule/: LatticeSwiftModule.swift
Sources/SqliteVec/include/: module.modulemap  sqlite-vec.h
Tests/LatticeCAPIHeaderCheck/: capi_header_compiles.c
Tests/LatticeCAPIHeaderCheck/include/: capi_header_check.h  module.modulemap
Tests/LatticeCAPITests/: CAPIBehaviorTests.cpp
Tests/LatticeCoreTests/: AttachTests.cpp  BridgeTests.cpp  CAPISurfaceTests.cpp  CascadeDeleteTests.cpp  DeferredDeliveryTests.cpp  IPCTests.hpp  InstanceLifecycleTests.cpp  LatticeCoreTests.cpp  LogTests.cpp  MultiConnectionTests.cpp  NamedMemoryTests.cpp  ObservationTests.cpp  QueryTests.cpp  ReadGenerationTests.cpp  SchemaTests.cpp  SyncIntegrationTests.hpp  SyncUnitTests.cpp  TestHelpers.hpp  Vec0Tests.cpp
Tests/LatticeCppTests/: LatticeCppTests.cpp  SyncIntegrationTests.hpp
Tests/LatticeSwiftCppTests/: LatticeSwiftCppTests.swift
docs/: CAPI-STABILITY.md  capi-gap-audit.md  design-deferred-memory-delivery.md  design-unified-open.md
